# FermIMSRG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _clang-format
.github/workflows/: linux.yml
fimsrg/: CMakeLists.txt  version.cc  version.h
fimsrg/tensor/: CMakeLists.txt
fimsrg/tensor/data/: CMakeLists.txt  tensor2d.cc  tensor2d.h  tensor4d.cc  tensor4d.h
fimsrg/tensor/data/internal/: CMakeLists.txt  data_buffer.cc  data_buffer.h
fimsrg/tensor/random/: CMakeLists.txt  tensor2d.cc  tensor2d.h  tensor4d.cc  tensor4d.h
fimsrg/utility/checks/: CMakeLists.txt  assert.cc  assert.h  error.cc  error.h  error_msg.h
fimsrg/utility/checks/internal/: CMakeLists.txt  assert_eval.cc  assert_eval.h  error_eval.cc  error_eval.h
fimsrg/utility/memory/: CMakeLists.txt  alignment.cc  alignment.h  allocate.cc  allocate.h
fimsrg/utility/memory/internal/: CMakeLists.txt  alignment.h  basic_allocator.h  pooled_allocator.cc  pooled_allocator.h
fimsrg/utility/profiling/: CMakeLists.txt  function_profile.h  profile_report.cc  profile_report.h
fimsrg/utility/profiling/internal/: CMakeLists.txt  profiling_data.cc  profiling_data.h  profiling_database.cc  profiling_database.h  profiling_event_data.h  single_event_profiler.cc  single_event_profiler.h
lib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/fimsrg/: CMakeLists.txt  version_test.cc
tests/fimsrg/tensor/data/: CMakeLists.txt  tensor2d_test.cc  tensor4d_test.cc
tests/fimsrg/tensor/data/internal/: CMakeLists.txt  data_buffer_test.cc
tests/fimsrg/utility/: CMakeLists.txt
tests/fimsrg/utility/checks/: CMakeLists.txt  assert_test.cc  error_test.cc
tests/fimsrg/utility/memory/: CMakeLists.txt  alignment_test.cc  allocate_test.cc
tests/fimsrg/utility/profiling/: CMakeLists.txt  function_profile_test.cc
