set(CATCH_BUILD_STATIC_LIBRARY ON CACHE BOOL "Force Catch2 to generate a static lib with main" FORCE)
add_subdirectory(Catch2)
set(INSTALL_GTEST OFF CACHE BOOL "Force googletest to not install GTest" FORCE)
add_subdirectory(googletest)
set(ABSL_PROPAGATE_CXX_STD ON CACHE BOOL "Force abseil to propagate C++ standard" FORCE)
set(ABSL_BUILD_TESTING OFF CACHE BOOL "Force abseil not to build tests" FORCE)
set(ABSL_USE_EXTERNAL_GOOGLETEST ON CACHE BOOL "Force abseil to use external googletest" FORCE)
set(ABSL_FIND_GOOGLETEST OFF CACHE BOOL "Force abseil not to find googletest" FORCE)
add_subdirectory(abseil-cpp)
add_subdirectory(fmt)
set(SPDLOG_FMT_EXTERNAL ON CACHE BOOL "Force spdlog to use external fmt" FORCE)
add_subdirectory(spdlog)
