add_executable(
    assert_test
    assert_test.cc
)
target_link_libraries(
    assert_test
    fermimsrg::checks
    Catch2::Catch2WithMain
)
catch_discover_tests(
    assert_test
)
add_executable(
    error_test
    error_test.cc
)
target_link_libraries(
    error_test
    fermimsrg::checks
    Catch2::Catch2WithMain
)
catch_discover_tests(
    error_test
)
